Use PCRE from Conan.io if available
Update to PCRE 8.38 from the conan package repository, including
security fixes.

In the future, the upstream PCRE Conan package can be modified and
upgraded as needed, benefiting all who use it.

Builds should still work as before without Conan packages.

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -16,7 +16,8 @@ install:
 build_script:
     - ps: |
         # Install Conan dependencies for 32-bit (x86)
-        conan install -s arch=x86
+        # PCRE currently needs built from source for x86 (only 64-bit builds provided)
+        conan install --build=pcre -s arch=x86
         # > For statically-linked OpenSSL, specify: -s compiler="Visual Studio" -s compiler.runtime=MT
         #   Then modify makefile.win to reference ..MT.lib instead.  Dynamic linking is preferred.
 
